--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -21,6 +21,23 @@
 % Adapted from http://tex.stackexchange.com/a/4304/9668
 \newcommand{\CC}{C\nolinebreak\hspace{.02em}+\nolinebreak\hspace{0.04em}+}
 
+
+\newcommand{\important}[2]{\colorbox{pink}{\begin{minipage}{\dimexpr\linewidth-2\fboxsep}#1
+\end{minipage}}
+\begin{flushright}
+\begin{minipage}{0.99\dimexpr\linewidth-2\fboxsep}\small
+\emph{Contribution:} #2
+\end{minipage}
+\end{flushright}}
+
+\newcommand{\paper}[2]{\colorbox{white}{\begin{minipage}{\dimexpr\linewidth-2\fboxsep}#1
+\end{minipage}}
+\begin{flushright}
+\begin{minipage}{0.99\dimexpr\linewidth-2\fboxsep}\small
+\emph{Contribution:} #2
+\end{minipage}
+\end{flushright}}
+
 % Layout: Puts the section titles on left side of page
 \reversemarginpar
 
@@ -66,6 +83,7 @@
 \usepackage{hyperref}
 \usepackage[dvipsnames]{xcolor}
 \definecolor{red}{HTML}{9B0E0E}
+\definecolor{pink}{HTML}{f5f0f1}
 
 
 \hypersetup{colorlinks,breaklinks,
@@ -136,12 +154,18 @@
 \makeheading{Olivia Guest}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{BIO}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+I am a theoretical psychologist with expertise in computational modelling, and six years postdoctoral experience as a researcher. I work on a range of pure and applied issues in the field including: neuropsychology, model-based fMRI, decision-making, artificial intelligence, political psychology, and the methods and practice of computational research.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{CONTACT}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{minipage}{.49\textwidth}
 \begin{description}
- \item[Emails:] \href{mailto:o.guest@ucl.ac.uk}{o.guest@ucl.ac.uk}
+ \item[Email:] \href{mailto:o.guest@ucl.ac.uk}{o.guest@ucl.ac.uk}
 %  \href{mailto:o.guest@rise.org.cy}{o.guest@rise.org.cy}
 %  \href{mailto:contact@oliviaguest.com}{contact@oliviaguest.com}
  \item[Website:] \href{http://oliviaguest.com}{oliviaguest.com}
@@ -158,158 +182,99 @@
 \vspace{8pt}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{CURRENT AFFILIATIONS}
+\section{QUALIFICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-  \textbf{\href{https://rise.org.cy}{RISE}, Cyprus}
-  \begin{outerlist}
-  \item[\textbf{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}]
-  \item[\textit{Researcher}] \hfill \textbf{2019--}
-  \end{outerlist}
-  \vspace{15pt}
-  
-  \textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
+\textbf{Ph.D.} \emph{Towards a Unified Computational Account of Semantic Impairments}  \hfill \textbf{2014}
 \begin{outerlist}
-  \item[\textbf{\href{https://bradlove.org/}{Prof. Bradley C. Love's Lab}}] 
-  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
+    \item [\href{http://www.bbk.ac.uk/}{Birkbeck}, UK. Supervisors: \emph{Richard P. Cooper}, \emph{Eddy J. Davelaar}]
+\end{outerlist}
+\vspace{15pt}
 
-  \end{outerlist}
-  \vspace{15pt}
-  
-  
-  \textbf{School of Mathematics, Computer Science and Engineering, City, \newline University of London, UK}
-  \begin{outerlist}
-  \item[\textbf{\href{https://cit-ai.net}{CitAI, Artificial Intelligence Research Centre}}]
-  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
-  \end{outerlist}
+\textbf{M.Sc.} Cognitive and Decision Sciences (Distinction) \hfill \textbf{2010}
+\begin{outerlist}
+     \item [\href{http://www.ucl.ac.uk/}{University College London}, UK.]
+\end{outerlist}     
+\vspace{15pt}
 
-  
+\textbf{B.Sc.} Computer Science \hfill \textbf{2009}
+\begin{outerlist}
+  \item[\href{http://www.york.ac.uk/}{The University of York}, UK.]
+\end{outerlist}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PROFESSIONAL\texorpdfstring{\newline}{ }EXPERIENCE}
+\section{EMPLOYMENT\texorpdfstring{\newline}{ }HISTORY}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-  \textbf{\href{https://rise.org.cy}{RISE}, Cyprus}
+  \textbf{\href{https://www.ru.nl/donders/}{Donders Centre for Cognitive Neuroimaging}, Netherlands}
   \begin{outerlist}
-  \item[\textbf{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}]
-  \item[\textit{Researcher}] \hfill \textbf{2019--}
+  \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2020--}
     
-  \begin{innerlist}
-    \item  Funded by EU Horizon 2020 programme (grant 739578) and the Republic of Cyprus through the Directorate General for European Programmes, Coordination and Development.
-    \item Researching deep neural network models with respect to face processing, conceptual organisation and alignment, and cognitive science generally. 
-  \end{innerlist}
-%   Carry out independent research on my own as well as in collaboration with other research groups, apply for grants, 
-  
+%   \begin{innerlist}
+%     \item Deep neural network models of concepts and of face processing. 
+%     \item Funded by EU Horizon 2020, and the Republic of Cyprus.
+%   \end{innerlist}
+
   \end{outerlist}
   
   \vspace{15pt}
-  
+  \textbf{\href{https://rise.org.cy}{RISE}, Cyprus}
+  \begin{outerlist}
+%   \item[\textbf{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}]
+  \item[\textit{Independent Researcher}] \hfill \textbf{2019--2020}
+    
+%   \begin{innerlist}
+%     \item Deep neural network models of concepts and of face processing. 
+%     \item Funded by EU Horizon 2020, and the Republic of Cyprus.
+%   \end{innerlist}
 
-\textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
-\begin{outerlist}
-  \item[\textbf{\href{https://bradlove.org/}{Prof. Bradley C. Love's Lab}}] 
-  \item[\textit{Affiliated Researcher}] \hfill \textbf{2019--}
-    \begin{innerlist}
-    \item  Serving on hiring committees for postdoctoral fellows.
-    \item  Assisting with Cognitive and Decision Sciences M.Sc.
-    \item  Mentoring students and postdocs.
-
-  \end{innerlist}
   \end{outerlist}
+  
   \vspace{15pt}
-
+ 
+  
 \begin{samepage}
 
 \textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
 \begin{outerlist}
   \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2016--2019}
   
-  \begin{innerlist}
-    \item  Created computational models: for categorisation, for model-based fMRI, used deep neural networks, etc.
-    \item  Mentored Ph.D. and M.Sc. students (CSML and DSML M.Sc.s)
-    \item  Organised training courses for: git, continuous integration, module testing.
-    \item  Served on hiring committees for postdoctoral fellows.
-    \item  Assisted with Cognitive and Decision Sciences M.Sc.
-  \end{innerlist}
+%   \begin{innerlist}
+%     \item Deep neural network models of categorisation, and in model-based fMRI.
+%     \item Worked with \href{https://www.ucl.ac.uk/pals/research/experimental-psychology/person/bradley-love/}{Brad Love}.
+%   \end{innerlist}
   \end{outerlist}
   \end{samepage}
 
   \vspace{15pt}
 
-  \textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK}
-  \begin{outerlist}
-  \item[\textit{Fellow 2016}] \hfill \textbf{2016--2017}
-  
-  \begin{innerlist}
-    \item    Received £3,000 grant funding for travel and organising workshops.
-    \item  Organised training courses for: version control (git), Python.
-    \item  Selected new fellows for 2017 and 2018.
-  \end{innerlist}
-  \end{outerlist}
-  \vspace{15pt}
-  
+
   \begin{samepage}
   \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
   \begin{outerlist}
   \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014--2016}
 
-  \begin{innerlist}
-    \item Created models for category learning in infancy.
-    \item Tutored on the Language and Cognition module.
-    \item Ran and developed the Block Practical: \href{http://oliviaguest.com/connectionism}{Connectionist Models and Cognitive Processes}.
-  \end{innerlist}
+%   \begin{innerlist}
+%     \item Computational modelling of category learning in infancy
+%     \item Worked with \href{https://www.psy.ox.ac.uk/team/kim-plunkett}{Kim Plunkett}.
+%   \end{innerlist}
 \end{outerlist}
   \vspace{15pt}
   \end{samepage}
 
 \textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
 \begin{outerlist}
-  \item[\textit{Graduate Teaching Assistant}] \hfill \textbf{2010--2014}
+  \item[\textit{Graduate Teaching Assistant / Ph.D. student}] \hfill \textbf{2010--2014}
 
-  \begin{innerlist}
-    \item Taught on a range of courses within psychological sciences.
-    \item Was trained to evaluate, mark, invigilate, and support part-time, mature, and full-time students.
-    \item Managed the SONA system.
-    %****will anyone know what SONA is?
-    \item Organised and led the \href{http://cccm.bbk.ac.uk/}{Centre for Cognition, Computation and Modelling}'s  seminar. 
-  \end{innerlist}
 \end{outerlist}
+
+
 
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{EDUCATION}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\textbf{\href{http://www.bbk.ac.uk/}{Birkbeck}, UK} \hfill \textbf{2010--2014}
-\begin{outerlist}
-  \item[Ph.D., Psychological Sciences,] Sep 2014
-  \begin{innerlist}
-    \item Thesis: \emph{Towards a Unified Computational Account of Semantic Impairments}
-    \item 1st Supervisor: \emph{Richard P. Cooper}
-    \item 2nd Supervisor: \emph{Eddy J. Davelaar}
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
-
-\textbf{\href{http://www.ucl.ac.uk/}{University College London}, UK} \hfill \textbf{2009--2010}
-\begin{outerlist}
-  \item[M.Sc., \href{http://www.ucl.ac.uk/lifesciences-faculty/degree-programmes/cognitive-decision-sciences}{Cognitive and Decision Sciences} (Distinction),] Sep 2010
-  \begin{innerlist}
-    \item Thesis: \emph{Modelling Semantic Memory \& Its Impairments Following Neural Damage}
-    \item Supervisor: \emph{Richard P. Cooper}
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
-
-\textbf{\href{http://www.york.ac.uk/}{The University of York}, UK} \hfill \textbf{2006--2009}
-\begin{outerlist}
-  \item[B.Sc., \href{http://www.cs.york.ac.uk/} {Computer Science},] Jun 2009
-\end{outerlist}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{REVIEWING \& \protect\newline SERVICE}
+\section{SERVICE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-10pt}
 \begin{outerlist}
@@ -319,13 +284,13 @@
 
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--2020}
    
- \item[\textbf{Conferences (ad hoc)}] \hfill
+ \item[\textbf{Conferences (ad hoc reviewing)}] \hfill
  
-  International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy).
+  International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
   
-   \item[\textbf{Journals (ad hoc)}] \hfill
+   \item[\textbf{Journals (ad hoc reviewing)}] \hfill
     
-    Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition, PLoS Computational Biology, Journal of Cognitive Neuroscience.
+    Cognitive Science Journal, Cognitive Psychology, Memory \& Cognition, PLoS Computational Biology, Journal of Cognitive Neuroscience, PeerJ.
     
    \item[\textbf{Special issue on \href{https://reproducibility-challenge.github.io/neurips2019/dates/}{NeurIPS 2019 Reproducibility Challenge}}] \hfill
    
@@ -333,107 +298,110 @@
 
  \end{outerlist}
 
- 
- 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PREPRINTS \& UNPUBLISHED}
+\section{MAIN PUBLICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % \textbf{Guest, O.}, Martin, A. E., \& Birhane, A. (in prep.). {There is no such thing as AI}.
-% \vspace{7.5pt}
+% \vspace{8pt}
 
-% \textbf{Guest, O.} et al. (submitted to special issue). {Can ``open science'' make science open?}. \textit{Psychology of Women Quarterly}.
-% \vspace{7.5pt}
 
-Bobadilla Suarez, S., \textbf{Guest, O.}, \& Love, B. C. (revise and resubmit).  {The neural link between subjective value and decision entropy}. \textit{Communications Biology}.
+\textbf{Guest, O.} \& Birhane, A. (invited). {Towards decolonising computational sciences}. \textit{Women, Gender \& Research}
+\vspace{8pt}
+
+\important{
+\textbf{Guest, O.} \& Martin, A. E. (2020).  \href{https://doi.org/10.31234/osf.io/rybh9}{How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}. \href{https://doi.org/10.31234/osf.io/rybh9}{doi.org/10.31234/osf.io/rybh9}}
+{We argue for the wide adoption of computational modelling in psychology, and provide a practical framework (with examples) to support this goal.}
+
+
+
+\paper{Bobadilla Suárez, S., \textbf{Guest, O.}, \& Love, B. C. (revise and resubmit).  {The neural link between subjective value and decision entropy}. \textit{Communications Biology}.
 \newline
-\href{https://doi.org/10.1101/2020.02.18.954362}{doi.org/10.1101/2020.02.18.954362}
-\vspace{7.5pt}
+\href{https://doi.org/10.1101/2020.02.18.954362}{doi.org/10.1101/2020.02.18.954362}}
+{Using model-based fMRI, we demonstrated that areas of the brain, previously thought to be responsive to subjective outcome value in a gambling task, are actually more responsive to decision confidence than subjective value.}
 
-Barlas, P., Kyriakou, K., \textbf{Guest, O.}, Kleanthous, S., \& Otterbacher, J. (in prep). {Social B(eye)as Dataset v2.0: Automatically Tagging People Images in Context}.
-\vspace{7.5pt}
+\paper{Barlas, P., Kyriakou, K., \textbf{Guest, O.}, Kleanthous, S., \& Otterbacher, J. (accepted). {To ``See'' is to Stereotype: Image Tagging Algorithms, Gender Recognition, and the Accuracy-Fairness Trade-off}. \textit{The 23rd ACM Conference on Computer-Supported Cooperative Work and Social Computing (CSCW 2020)}.}{Several automatic gender detection systems are fooled by gender-stereotyped backgrounds. The system that is most human-like in its operation is also the one that is best at recognizing gender. \emph{(Peer reviewed conferencing proceedings are typical in Computer Science)}.}
 
-Barlas, P., Kyriakou, K., \textbf{Guest, O.}, Kleanthous, S., \& Otterbacher, J. (in prep). {A ``Woman's Place'' is Nowhere: Image Tagging Algorithms Overlook Women Even in Stereotypically Feminine Contexts}.
-\vspace{7.5pt}
+\important{
+\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (2020).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behavior}
+ \href{https://doi.org/10.1007/s42113-020-00081-z}{doi.org/10.1007/s42113-020-00081-z}}
+{We re-evaluate two classic connectionist models of neuropsychological deficits. In the case of the 'hub and spoke' model of semantic dementia, the original results are not robust.} 
 
-\textbf{Guest, O.} \& Martin, A. E. (under review, invited to special issue).  \href{https://doi.org/10.31234/osf.io/rybh9}{How computational modeling can force theory building in psychological science}. \textit{Perspectives on Psychological Science}. \href{https://doi.org/10.31234/osf.io/rybh9}{doi.org/10.31234/osf.io/rybh9}
-\vspace{7.5pt}
+\vspace{8pt}
 
-Whitaker, K. J. \& \textbf{Guest, O.} (invited, in press).  {\#bropenscience is broken science}. \textit{The Psychologist}.
-\vspace{7.5pt}
+\important{\textbf{Guest, O.}, Kanayet, F. J., \& Love, B. C. (2019). \href{https://dx.doi.org/10.1007/s42001-019-00053-9}{Gerrymandering and Computational Redistricting}. \textit{Journal of Computational Social Science}. 
+\href{https://dx.doi.org/10.1007/s42001-019-00053-9}{doi.org/10.1007/s42001-019-00053-9}}
+{Partisan gerrymandering is a threat to democracy, and at the same time the drawing of optimal boundaries is beyond human capabilities. We created a computational model that draws boundaries based on a set of open principles, and does so more optimally than humans}.
 
-\textbf{Guest, O.} \& Love, B. C. (2019). \href{https://dx.doi.org/10.1101/626374}{Levels of Representation in a Deep Learning Model of Categorization}. \textit{bioRxiv}. \href{https://doi.org/10.1101/626374}{doi.org/10.1101/626374}
+\vspace{8pt}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PUBLICATIONS}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\textbf{Guest, O.}, Caso A. \& Cooper, R. P. (2020, in press).  {On Simulating Neural Damage in Connectionist Networks}. \textit{Computational Brain \& Behavior}
- \href{https://doi.org/10.1007/s42113-020-00081-z}{doi.org/10.1007/s42113-020-00081-z}
-\vspace{7.5pt}
-
-Botvinik-Nezer, R. et al. (2020). \href{https://doi.org/10.1038/s41586-020-2314-9}{Variability in the analysis of a single neuroimaging dataset by many teams}. \textit{Nature}. \href{https://doi.org/10.1038/s41586-020-2314-9}{doi.org/10.1038/s41586-020-2314-9}
-\vspace{7.5pt}
-
-
-\textbf{Guest, O.}, Kanayet, F. J., \& Love, B. C. (2019). \href{https://dx.doi.org/10.1007/s42001-019-00053-9}{Gerrymandering and Computational Redistricting}. \textit{Journal of Computational Social Science}. 
-\href{https://dx.doi.org/10.1007/s42001-019-00053-9}{doi.org/10.1007/s42001-019-00053-9}
-\vspace{7.5pt}
-
-Rougier, N. P. et al. (2017). \href{http://dx.doi.org/10.7717/peerj-cs.142}{Sustainable computational science: the ReScience initiative}. \textit{PeerJ Computer Science}. \href{http://dx.doi.org/10.7717/peerj-cs.142}{doi.org/10.7717/peerj-cs.142}  
-\vspace{7.5pt}
-
-Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}. (pp. 1457--1458).
-\vspace{7.5pt}
-
+\important{
 \textbf{Guest, O.} \& Love, B. C. (2017). \href{http://dx.doi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
 \href{http://dx.doi.org/10.7554/eLife.21397}{doi.org/10.7554/eLife.21397}
-\vspace{7.5pt}
+}{Through proof and simulation, we determine which neural coding schemes are plausible given fMRI’s successes and its limitations.
+Our results have implications for the nature of the neural code and ventral stream, as well as what can be successfully investigated with fMRI.
+}
+\vspace{8pt}
+
+\paper{Love, B. C., Kopeć, Ł. \& \textbf{Guest, O.} (2015). \href{http://dx.doi.org/10.1371/journal.pone.0137685}{Optimism Bias in Fans and Sports Reporters}. \textit{PLoS ONE}, 10 (9).
+\href{http://dx.doi.org/10.1371/journal.pone.0137685}{doi.org/10.1371/journal.pone.0137685}}{We asked NFL fans to predict how many games teams they like and dislike would win in the 2015 season.
+Fans, like ESPN reporters assigned to cover a team, are overly optimistic about their team's prospects while the opposite pattern holds for teams that fans disliked.}
+\vspace{8pt}
+
+\important{
+Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{Implementations are not specifications: specification, replication and experimentation in computational cognitive modeling}. \textit{Cognitive Systems Research}, 27, 42--49.
+\href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{doi.org/10.1016/j.cogsys.2013.05.001}}{The specification of a computational theory, and the details of the way one implements that specification in a simulation, are importantly different. Failure to fully appreciate this difference can lead to undetected poor reproducibilty. Replication of a model's predictions through independent implementation of a set of clear specifications is one answer.}
+
+\vspace{8pt}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{OTHER PUBLICATIONS}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+Whitaker, K. J. \& \textbf{Guest, O.} (in press).  {\#bropenscience is broken science} \textit{The Psychologist}.
+\vspace{8pt}
+
+\paper{Botvinik-Nezer, R. et al. (2020). \href{https://doi.org/10.1038/s41586-020-2314-9}{Variability in the analysis of a single neuroimaging dataset by many teams}. \textit{Nature}. \href{https://doi.org/10.1038/s41586-020-2314-9}{doi.org/10.1038/s41586-020-2314-9}}{I ran the model-based fMRI analysis for one of the 70 teams on this project.}
+
+Rougier, N. P. et al. (2017). \href{http://dx.doi.org/10.7717/peerj-cs.142}{Sustainable computational science: the ReScience initiative}. \textit{PeerJ Computer Science}. \href{http://dx.doi.org/10.7717/peerj-cs.142}{doi.org/10.7717/peerj-cs.142}
+\vspace{8pt}
+
+Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}. (pp. 1457--1458).
+\vspace{8pt}
 
 \textbf{Guest, O.} \& Rougier, N. P. (2016). \href{https://oliviaguest.com/doc/guest_rougier_2016.pdf}{What is computational reproducibility?} \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems}, 13 (1).
-\vspace{7.5pt}
+\vspace{8pt}
 
 \textbf{Guest, O.} (2016). \href{http://dx.doi.org/10.15200/winn.146590.01538}{Crisis in What Exactly?}. \textit{The Winnower}. \newline
 \href{http://dx.doi.org/10.15200/winn.146590.01538}{doi.org/10.15200/winn.146590.01538}
-\vspace{7.5pt}
+\vspace{8pt}
 
-Love, B. C., Kopeć, Ł. \& \textbf{Guest, O.} (2015). \href{http://dx.doi.org/10.1371/journal.pone.0137685}{Optimism Bias in Fans and Sports Reporters}. \textit{PLoS ONE}, 10 (9).
-\href{http://dx.doi.org/10.1371/journal.pone.0137685}{doi.org/10.1371/journal.pone.0137685}
-\vspace{7.5pt}
-
-Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{Implementations are not specifications: specification, replication and experimentation in computational cognitive modeling}. \textit{Cognitive Systems Research}, 27, 42--49.
-\href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{doi.org/10.1016/j.cogsys.2013.05.001}
-\vspace{7.5pt}
-
-\textbf{Guest, O.}, Cooper, R. P. \& Davelaar, E. J. (2014).  [High-Level Cognition]. \href{http://oliviaguest.com/doc/guest_14.pdf}{The Influence of Implementation on ``Hub'' Models of Semantic Cognition}. In J. Mayor, P. Gomez (Eds.), \textit{\href{http://www.worldscientific.com/worldscibooks/10.1142/8747}{Computational Models of Cognitive Processes}} (pp. 155--169). World Scientific.
-\vspace{7.5pt}
-
-\begin{samepage}
+\textbf{Guest, O.}, Cooper, R. P. \& Davelaar, E. J. (2014).   \href{http://oliviaguest.com/doc/guest_14.pdf}{The Influence of Implementation on ``Hub'' Models of Semantic Cognition}. In J. Mayor, P. Gomez (Eds.), \textit{\href{http://www.worldscientific.com/worldscibooks/10.1142/8747}{Computational Models of Cognitive Processes}} (pp. 155--169). World Scientific.
+\vspace{8pt}
 
 \textbf{Guest, O.}, Cooper, R. P. \& Davelaar, E. J. (2012). \href{http://eprints.bbk.ac.uk/6758/}{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}. \textit{In Proceedings of the Ninth International Conference on Cognitive Modelling.} Berlin, Germany. April. (pp. 259--264). Berlin, Germany. April. Universit\"{a}tsverlag der TU Berlin.
 
-\end{samepage}
-
-
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{INVITED\texorpdfstring{\newline}{ }TALKS}
+\section{SELECTED INVITED\texorpdfstring{\newline}{ }TALKS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\textbf{\href{}{Bordeaux-Sud-Ouest Inria Research Centre}} 
-\begin{outerlist}
-  \item[] \textit{Bordeaux, France}\hfill\textbf{21--22 Sep 2020}
-  \begin{innerlist}
-    \item Talk (TBD): \textit{How computational modeling can force theory building in psychological science}
-    \item Organiser: Nicolas P. Rougier
+% \textbf{\href{https://www.inria.fr/en/centre-bordeaux-sud-ouest}{Bordeaux-Sud-Ouest Inria Research Centre}} 
+% \begin{outerlist}
+%   \item[] \textit{Bordeaux, France}\hfill\textbf{21--22 Sep 2020}
+%   \begin{innerlist}
+%     \item Talk: \textit{How computational modeling can force theory building in psychological science}
+%     \item Organiser: Nicolas P. Rougier
 
 
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
+%   \end{innerlist}
+% \end{outerlist}
+% \vspace{8pt}
 
 
 \textbf{\href{https://www.eventbrite.co.uk/o/reproducibilitea-ucl-19116673509}{ReproducibiliTea UCL}} 
@@ -441,7 +409,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \item[] \textit{UCL, UK}\hfill\textbf{14 Sep 2020}
   \begin{innerlist}
     \item Talk: \textit{How computational modeling can force theory building in psychological science}
-    \item Organiser: Emma Norris, Tabea Schoeler, \&  Jessie Baldwin
+    \item Organisers: Emma Norris, Tabea Schoeler, \&  Jessie Baldwin
 
   \end{innerlist}
 \end{outerlist}
@@ -453,8 +421,8 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \begin{innerlist}
     \item Symposium: \textit{Perspectives on ``What makes a good theory?''}
     \item Organisers: Iris van Rooij \& Chris Donkin 
-
-
+    \item Talk:  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}.
+    \item  \href{https://youtu.be/8Aa9_6ahO48}{Link to video}.
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -463,8 +431,9 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \begin{outerlist}
   \item[] \textit{King's College London, London, UK}\hfill\textbf{2 Jul 2020}
   \begin{innerlist}
-    \item Talk (TBD): \textit{How computational modeling can force theory building in psychological science}
+    \item Talk: \href{https://youtu.be/IhlF0B_IQJE}{\textit{How computational modeling can force theory building in psychological science}}
     \item Organiser: Miguel Xochicale
+    \item \href{https://youtu.be/IhlF0B_IQJE}{Link to video}.
 
 
   \end{innerlist}
@@ -479,8 +448,6 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
     \item Talk: \textit{\href{https://www.youtube.com/watch?v=_WV7EFvFAB8}{How computational modeling can force theory building in psychological science}}
     \item Organisers: Anna Henschel \& Stephanie Allan
     \item Speakers: Olivia Guest \& Andrea E. Martin
-
-
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -563,6 +530,27 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \section{CONFERENCE \texorpdfstring{\newline}{ } PRESENTATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\textbf{\href{http://mathpsych.org/conferences/2020/}{MathPsych/ICCM 2020}}
+\begin{outerlist}
+  \item[] \textit{Virtual}\hfill\textbf{20 Jul 2020}
+  \begin{innerlist}
+    \item Talk (invited):  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}.
+    \item  \href{https://youtu.be/8Aa9_6ahO48}{Link to video}.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+
+\textbf{\href{https://ohbm.github.io/osr2020/}{Open Science Room at Organisation for Human Brain Mapping (OHBM)}}
+\begin{outerlist}
+  \item[] \textit{Virtual}\hfill\textbf{30 Jun 2020}
+  \begin{innerlist}
+    \item Panel discussion (invited):  \href{https://github.com/ohbm/osr2020/issues/88}{\textit{Past, Present and Future of Open Science (Emergent session): Pre-registration, Registered reports}}.
+    \item  \href{https://youtu.be/VIbD6QXM8Zc}{Link to video}.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
 
 \textbf{\href{https://www.sfn.org/meetings/neuroscience-2019}{Society for Neuroscience (SfN 2019)}}
 \begin{outerlist}
@@ -580,7 +568,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \begin{outerlist}
   \item[] \textit{Nicosia, Cyprus}\hfill\textbf{4 Oct 2019}
   \begin{innerlist}
-    \item Talk and poster:  \textit{Levels of Representation in a Deep Learning Model of Categorization}.
+    \item Talk (invited) and poster:  \textit{Levels of Representation in a Deep Learning Model of Categorization}.
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -592,7 +580,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
     \item Talk: \textit{Levels of Representation in a Deep Learning Model of Categorization}.
   \end{innerlist}
 \end{outerlist}
-\begin{samepage}
+\vspace{8pt}
 
 \textbf{\href{http://www.cognitivesciencesociety.org/conference/cogsci2017/}{ 39th Annual Meeting of the Cognitive Science Society (CogSci 2017)}}
 \begin{outerlist}
@@ -601,7 +589,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
     \item Talk: \textit{Deep Networks as Models of Human and Animal Categorization}.
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}\end{samepage}
+\vspace{8pt}
 
 \begin{samepage}
 
@@ -665,6 +653,15 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
 \section{ORGANISING}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\textbf{\href{https://sites.google.com/view/queer-in-ai/icml-2020}{Queer in AI @ ICML 2020 Workshop}}
+\begin{outerlist}
+  \item[] \textit{Virtual} \hfill \textbf{14 Jul 2020}
+  \begin{innerlist}
+    \item Organised and ran \href{https://sites.google.com/view/queer-in-ai/icml-2020-covid-19-discussion}{COVID-19 Issues and LGBTQ Folks in ML/AI
+} with Stephen Molldrem, Mustafa I. Hussain, and Luke Stark.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
 
 \textbf{\href{https://scipy2019.scipy.org}{18th Scientific Computing with Python Conference (SciPy 2019)}}
 \begin{outerlist}
@@ -732,7 +729,7 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.c
   \begin{innerlist}
     \item Module: \textit{Third Year, B.Sc.}
     \item Designed course structure and materials (slides and exercises).
-    \item Set final report wherein students replicated from scratch Tyler et al. (2000) in Python.
+    \item Students replicated from scratch Tyler et al. (2000) in Python.
     \item Created course website: \href{http://oliviaguest.com/connectionism}{oliviaguest.com/connectionism}.
   \end{innerlist}
       \item[\textit{Tutorial: Language and Cognition}] \
@@ -768,7 +765,7 @@ UK}
 	\item Interview: \textit{What can we learn in 4 months?}
 \end{innerlist}
 
-\item[\textbf{\href{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0137685}{Optimism Bias in Fans and Sports Reporters}}] \hfill\textbf{2015}
+\item[\textbf{\href{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0137685}{Optimism bias in fans and sports reporters}}] \hfill\textbf{2015}
 \begin{innerlist}
   \item Press Releases: \href{http://www.ox.ac.uk/news/2015-09-09-nfl-fans-and-espn-reporters-overly-optimistic-about-team-prospects}{University of Oxford}, \href{https://www.ucl.ac.uk/news/news-articles/0915/100915-nfl-team-prospects}{UCL}
   \item Media Coverage: \href{http://www.csmonitor.com/Science/2015/0909/NFL-scores-Your-team-is-probably-less-invincible-than-you-imagine}{CS Monitor},
@@ -800,14 +797,16 @@ UK}
 Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog, Python, R, Scheme, SQL, Visual Basic.
  \end{outerlist}
 
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \section{LANGUAGES}
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \vspace{-10pt}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{THINGS I HAVE NAMED}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-10pt}
 
-% \begin{description}
-%  \item[Native:] Modern Greek, Cypriot Greek, English
-%   \item[Basic:] French, Italian
-%  \end{description}
+\begin{description}
+\item[Labs:] CitAI, Psicofisika
+  \item[Organisations:] AntiRa
+  \item[Software:] Caladown
+  
+  \end{description}
 \end{document}
 % %%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
